--- a/config/database.yml
+++ b/config/database.yml
@@ -4,7 +4,7 @@ default: &default
   database: <%= ENV['POSTGRES_DB'] || 'docker_test' %>
   username: ror
   password: 1234
-  host: <%= ENV['POSTGRES_ENDPOINT'] || 'localhost' %>
+  host: <%= ENV['POSTGRES_ENDPOINT'] || 'db' %>
   port: 5432
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
