--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,35 @@
-version: '2'
+version: '3.2'
 services:
-
-  db:
-    image: postgres:9.6
-    env_file:
-      - db.env
-    volumes:
-      - db-data:/var/lib/postgresql/data
-    ports:
-      - '5432'
-    restart: always
-
-  redis:
-    image: redis:alpine
-    volumes:
-      - redis-data:/var/lib/redis
-    ports:
-      - '6379'
-
   web:
     build: .
-    command: /bin/bash -c "bundle install; bundle exec rails s -p 3000 -b '0.0.0.0'"
+    ports:
+      - "3001:3001"  # host:container
+    environment:
+      - RAILS_ENV=development
+      - RACK_ENV=development
+      - DATABASE_URL=postgres://ror:1234@db:5432/docker_test
     env_file:
       - db.env
       - rails.env
-      - redis.env
     volumes:
       - .:/app
-    ports:
-      - "3000:3000"
+      - bundle_cache:/usr/local/bundle
     depends_on:
       - db
-      - redis
+    restart: always
+
+  db:
+    image: postgres:9.6
+    ports:
+      - "5466:5432"
+    environment:
+      - POSTGRES_USER=ror
+      - POSTGRES_PASSWORD=1234
+      - POSTGRES_DB=docker_test
+    volumes:
+      - db-data:/var/lib/postgresql/data
     restart: always
 
 volumes:
-  redis-data:
-    driver: local
   db-data:
-    driver: local
+  bundle_cache:
